--- a/.kanbn/tasks/h303.md
+++ b/.kanbn/tasks/h303.md
@@ -11,4 +11,16 @@ completed: 2024-01-08T00:00:00.000Z
 
 # H303
 
-Desarrollo de la interfaz de usuarios 
+Desarrollo de la interfaz de usuarios
+
+
+  Historia de usuario 3: Interfaz Simple y Fácil de Usar
+
+Como usuario, quiero que la aplicación tenga una interfaz simple y fácil de usar.
+
+Criterios de aceptación:
+
+* El diseño de la interfaz debe ser intuitivo, siguiendo principios de usabilidad.
+* La navegación dentro de la aplicación debe ser clara, con un menú de fácil acceso.
+* Todas las funciones principales deben ser accesibles en no más de tres clics o toques.
+* Se debe proporcionar una breve guía de introducción para nuevos usuarios.
