--- a/.kanbn/tasks/h404.md
+++ b/.kanbn/tasks/h404.md
@@ -12,3 +12,13 @@ completed: 2024-01-08T00:00:00.000Z
 # H404
 
 Realización de un panel de autocompletado
+
+ Historia de usuario 4: Autocompletar en la búsqueda
+
+Como usuario, quiero poder buscar posturas de yoga fácilmente escribiendo solo una parte de su nombre.
+
+Criterios de aceptación:
+
+* Mientras se escribe el nombre de la postura, el sistema debe ofrecer sugerencias de autocompletar.
+* Las sugerencias deben basarse en la base de datos de posturas y ser actualizadas de manera dinámica.
+* Las sugerencias deben desplegarse de manera rápida y sin retrasos perceptibles.
