--- a/.kanbn/tasks/h505.md
+++ b/.kanbn/tasks/h505.md
@@ -12,3 +12,15 @@ completed: 2024-01-08T00:00:00.000Z
 # H505
 
 Validación y demostración de mensajes de error por no encontrar las asanas
+
+
+ Historia de usuario 5: Validación en la entrada de texto en la pestaña de diccionario
+
+**Como usuario, quiero poder registrar nuevos términos en el diccionario de la aplicación de yoga sin errores.
+
+Criterios de aceptación:
+
+* La aplicación debe validar la entrada de texto en la pestaña de diccionario.
+* Se debe mostrar un mensaje claro de error si se intenta registrar un texto no válido o vacío.
+* La validación debe realizarse tanto en el lado del cliente como en el lado del servidor para mayor seguridad.
+* Se debe proporcionar retroalimentación inmediata al usuario al intentar ingresar información inválida.
