--- a/.kanbn/tasks/h101.md
+++ b/.kanbn/tasks/h101.md
@@ -13,11 +13,10 @@ completed: 2024-01-08T00:00:00.000Z
 
 Al escribir una palabra se realiza una traducción en los idiomas correspondientes
 
-## Historia de usuario 1: Traducción entre Inglés, Sánscrito y Español
+ Historia de usuario 1: Traducción entre Inglés, Sánscrito y Español
 
-**Como usuario, quiero que la aplicación pueda traducir posturas de yoga entre inglés, sánscrito y español.**
-
-**Criterios de aceptación:**
+Como usuario, quiero que la aplicación pueda traducir posturas de yoga entre inglés, sánscrito y español.
+Criterios de aceptación:
 
 * La traducción de la postura debe ocurrir en tiempo real y mostrarse simultáneamente en español, inglés y sánscrito.
 * Las traducciones deben ser precisas y comprensibles en los idiomas de destino, verificadas mediante revisión manual.
